# Countdown

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  configure
scripts/: build-and-run.sh  clean-build.sh  cmake-build.sh
src/: ArgUtils.cpp  ArgUtils.h  CMakeLists.txt  Dictionary.cpp  Dictionary.h  FileReading.cpp  FileReading.h  Solver.cpp  Solver.h  StatsUtils.cpp  StatsUtils.h  WordUtils.cpp  WordUtils.h  main.cpp
test/: ArgUtilsTests.cpp  CMakeLists.txt  DictionaryTests.cpp  FileReadingTests.cpp  RunAllTests.cpp  SolverTests.cpp  StatsUtilsTests.cpp  WordUtilsTests.cpp
